[metadata]
name = thorlabs_documentation
version = attr: thorlabs_documentation.VERSION
author = Thomas Bischof
author_email = tsbischof@gmail.com
url = https://github.com/tsbischof/thorlabs-documentation
urls = [
    Homepage = https://github.com/tsbischof/thorlabs-documentation
    Issue Tracker = https://github.com/tsbischof/thorlabs-documentation/issues
description = Scrape documentation from Thorlabs
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    CAD
    optics
    optomechanics
    motion control
license = BSD 3-clause
classifiers = 
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find_namespace:
install_requires = 
    beautifulsoup4
    requests

[options.entry_points]
console_scripts = 
    fetch_thorlabs = thorlabs_documentation.cli:fetch_many

[options.packages.find]
where = src

[tox:tox]
min_version = 4.0
env_list = 
    py37
    py38
    py39
    py310
    py311
    format

[testenv]
deps = 
    pytest
    requests
commands = pytest src/thorlabs_documentation/tests

[testenv:format]
deps = black
skip_install = true
commands = black .
